# hermes

./: .gitignore  .prettierrc  LICENSE  README.md  docker-compose.yml  main.py  minds14.py  pyproject.toml  whisper.py
assets/: bat.webm
client/: .editorconfig  .gitignore  .prettierrc  README.md  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
client/electron/: main.ts  tsconfig.json
client/src/: App.tsx  index.css
client/src/components/: AudioButton.tsx  AudioControls.tsx  AudioRecorder.tsx  Container.tsx  Dialog.tsx  ResponseBox.tsx  Section.tsx  TranscriptBox.tsx
client/src/services/: api.ts
mercury/: Dockerfile  README.md  main.py  pyproject.toml  speech_recognition.py
protos/: main.proto
pyasr/: .editorconfig  .gitignore  README.md  main.py  pyproject.toml  setup_sh
pyasr/protos/: pyasr.proto
pyasr/src/: whisper.py
pysst/: .gitignore  README.md  logger.py  main.py  pyproject.toml  whisper.py
pystt/: .gitignore  README.md  llama.py  logger.py  main.py  pyproject.toml  whisper.py
src/: whisper.py
src/hecate/: Dockerfile  go.mod  main.go
src/hermes/: .gitignore  Dockerfile  index.html  package.json  tsconfig.json
src/hermes/src/: App.tsx  app.tsx  index.css  main.tsx
src/hermes/src/components/: AudioControls.tsx  AudioRecorder.tsx  DialogText.tsx  Loading.tsx  audio_button.tsx  audio_controls.tsx  audio_recorder.tsx  box.tsx  chat_box.tsx  dialog_box.tsx  dialog_text.tsx  flash.tsx  loading.tsx  read_button.tsx  record_button.tsx  speech_button.tsx  text_to_speech.tsx  toggle_input.tsx  voice_selector.tsx
src/hermes/src/lib/: utils.ts
src/hermes/src/services/: api.ts  gateway.ts
src/pluto/: Dockerfile  example.env  go.mod  main.go
