[project]
name = "asr"
version = "0.1.0"
description = ""
authors = [
    {name = "Sam",email = "samme.s90@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.12"
llvmlite = "^0.44.0"
librosa = "^0.10.2.post1"
matplotlib = "^3.10.0"
numba = "^0.61.0"
numpy = "2.1.3"
datasets = {extras = ["audio"], version = "^3.2.0"}
gradio = "^5.13.2"
