[project]
name = "asr"
version = "0.1.0"
description = ""
authors = [
    {name = "Sam",email = "samme.s90@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"

[tool.poetry.dependencies]
python = ">=3.12"
librosa = "^0.10.2.post1"
transformers = "^4.48.2"
torch = "^2.6.0"
torchaudio = "^2.6.0"
llvmlite = "^0.44.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"