[project]
name = "mercury"
version = "0.1.0"
description = "Speech recognition service"
authors = [{name = "Sam", email = "samme.s90@gmail.com"}]
dependencies = [
  "pylo @ git+https://github.com/samme90s/pylo.git@v0.1.1",
  "transformers>=4.49.0",
  "llvmlite>=0.44.0",
  "torch>=2.6.0",
  "numpy>=2.2.3",
  "fastapi[standard]>=0.115.8",
]
requires-python = "==3.12.*"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = false
