# https://python-poetry.org/docs/pyproject/
[project]
name = "pyasr"
version = "0.1.0"
description = "Python automatic speech recognition"
authors = [{ name = "Sam", email = "samme.s90@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"
transformers = "^4.48.2"
llvmlite = "^0.44.0"
librosa = "^0.10.2.post1"
torch = "^2.6.0"
grpcio = "^1.70.0"
grpcio-tools = "^1.70.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
