[project]
name = "pystt"
version = "0.0.0"
description = "Python speech to text"
dependencies = [
    "transformers>=4.49.0",
    "llvmlite>=0.44.0",
    "torch>=2.6.0",
    "fastapi[standard]>=0.115.8",
    "numpy>=2.2.3",
    "ollama>=0.4.7",
]
requires-python = "==3.12.*"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = false
